--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Homes#show</h1>
-<p>Find me in app/views/homes/show.html.erb</p>
+<h1>こんにちは、<%= current_user.username %>さん</h1>
+<p>ユーザー用ページです</p>
