--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EnglishDiaryApp</title>
+    <title>EnglishDiary</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
-
   <body>
     <header>
-      <nav>
-        <% if user_signed_in? %>
-          <strong><%= link_to current_user.username, homes_show_path %></strong>
-          <%= link_to "プロフィール変更", edit_user_registration_path %>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        <% else %>
-          <%= link_to "サインアップ", new_user_registration_path %>
-          <%= link_to "ログイン", new_user_session_path %>
-        <% end %>
+      <h1>English Diary</h1>
+      <nav id="global_navi">
+        <ul>
+          <% if user_signed_in? %>
+            <strong><%= link_to current_user.username, homes_show_path %></strong>
+            <li><%= link_to "プロフィール変更", edit_user_registration_path %></li>
+            <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to "サインアップ", new_user_registration_path %></li>
+            <li><%= link_to "ログイン", new_user_session_path %></li>
+          <% end %>
+        </ul>
       </nav>
     </header>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+    <footer>
+      <div class="footer_navi">
+        <small>&copy; 2022 English Diary</small>
+      </div>
+    </footer>
   </body>
 </html>
