--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
           <% if user_signed_in? %>
             <strong><%= link_to current_user.email, homes_show_path %></strong>
             <li><%= link_to "プロフィール変更", edit_user_registration_path %></li>
-            <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+            <li><%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %></li>
           <% else %>
             <li><%= link_to "サインアップ", new_user_registration_path %></li>
             <li><%= link_to "ログイン", new_user_session_path %></li>
