#6 [update] ゲストログイン機能追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
           <% else %>
             <li><%= link_to "サインアップ", new_user_registration_path %></li>
             <li><%= link_to "ログイン", new_user_session_path %></li>
+            <li><%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, method: :post %></li>
           <% end %>
         </ul>
       </nav>
