--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
       <nav id="global_navi">
         <ul>
           <% if user_signed_in? %>
+            <li><% if current_user.avatar? %>
+              <%= image_tag current_user.avatar.url %>
+              <% end %></li>
             <strong><%= link_to current_user.username, homes_show_path %></strong>
             <li><%= link_to "プロフィール変更", edit_profiles_path %></li>
             <li><%= button_to "ログアウト", destroy_user_session_path, method: :delete %></li>
