--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -3,7 +3,7 @@
   <div class="diaries">
     <% @diaries.each do |diary| %>
       <div class="diary">
-        <div class="created_at"><%= diary.created_at %></div>
+        <div class="created_at"><%= diary.created_at.strftime("%Y年%m月%d日 %H時%M分") %></div>
         <div class="photo">
           <% if diary.photo? %>
             <%= image_tag diary.photo.url %>
