--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -11,10 +11,12 @@
             <%= image_tag diary.photo.url %>
           <% end %>
         </div>
-        <div class="japanese_diary">
-          <p>日本語</p>
-          <%= diary.japanese_diary %>
-        </div>
+        <% if diary.japanese_diary? %>
+          <div class="japanese_diary">
+            <p>日本語</p>
+            <%= diary.japanese_diary %>
+          </div>
+        <% end %>
         <div class="english_diary">
           <p>英語</p>
           <%= diary.english_diary %>
