--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -11,15 +11,17 @@
             <%= image_tag diary.photo.url %>
           <% end %>
         </div>
-        <% if diary.japanese_diary? %>
-          <div class="japanese_diary">
-            <p>日本語</p>
-            <%= diary.japanese_diary %>
+        <div class="diary_container">
+          <div class="english_diary">
+            <p>英語</p>
+            <%= diary.english_diary %>
           </div>
-        <% end %>
-        <div class="english_diary">
-          <p>英語</p>
-          <%= diary.english_diary %>
+          <% if diary.japanese_diary? %>
+            <div class="japanese_diary">
+              <p>日本語</p>
+              <%= diary.japanese_diary %>
+            </div>
+          <% end %>
         </div>
       </div>
     <% end %>
