#12 [update] 日記編集画面に飛べるようにした

--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -21,6 +21,9 @@
             </div>
           <% end %>
         </div>
+        <div class="link">
+          <%= link_to "編集", edit_diary_path(diary.id) %>
+        </div>
       </div>
     <% end %>
   </div>
