#22 [update] 日記投稿日時と公開、非公開を隣に配置

--- a/app/assets/stylesheets/diaries.scss
+++ b/app/assets/stylesheets/diaries.scss
@@ -2,6 +2,11 @@ h2 {
   padding-left: 30px;
 }
 
+.diary_container_top {
+  display: flex;
+  justify-content: space-between;
+}
+
 .created_at {
   color: rgb(124, 121, 121);
   padding-bottom: 15px;
