--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -3,15 +3,17 @@
   <div class="diaries">
     <% @diaries.each do |diary| %>
       <div class="diary">
-        <div class="created_at">
-          <%= diary.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
-        </div>
-        <div class="private_flag">
-          <% if diary.private_flag == true %>
-            <p>非公開</p>
-          <% else %>
-            <p>公開</p>
-          <% end %>
+        <div class="diary_container_top">
+          <div class="created_at">
+            <%= diary.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
+          </div>
+          <div class="private_flag">
+            <% if diary.private_flag == true %>
+              <p>非公開</p>
+            <% else %>
+              <p>公開</p>
+            <% end %>
+          </div>
         </div>
         <div class="photo">
           <% if diary.photo? %>
