#22 [update] 分かりやすいようにclass名を変更

--- a/app/assets/stylesheets/diaries.scss
+++ b/app/assets/stylesheets/diaries.scss
@@ -12,7 +12,7 @@ h2 {
   padding-bottom: 15px;
 }
 
-.diary {
+.diary_container {
   background-color: white;
   padding: 15px 25px;
   margin: 25px 35px;
