--- a/app/assets/stylesheets/diaries.scss
+++ b/app/assets/stylesheets/diaries.scss
@@ -6,7 +6,7 @@ h2 {
   background-color: white;
   width: 500px;
   padding: 15px 25px;
-  margin: 25px 35px;
+  margin: 25px auto;
 }
 
 .diary_container_top {
