#24 [update] 日記投稿者がアバターの登録をしていれば、アバターを表示させるようにした

--- a/app/views/all_diaries/index.html.erb
+++ b/app/views/all_diaries/index.html.erb
@@ -3,6 +3,11 @@
   <div class="diaries">
     <% @diaries.each do |diary| %>
       <div class="diary_container">
+        <% if diary.user.avatar? %>
+          <div class="avatar">
+            <%= image_tag diary.user.avatar.url %>
+          </div>
+        <% end %>
         <div class="username">
           <%= diary.user.username %>
         </div>
