--- a/app/assets/stylesheets/diaries.scss
+++ b/app/assets/stylesheets/diaries.scss
@@ -29,3 +29,11 @@ h2 {
 .english_diary {
   padding: 15px 0;
 }
+
+.submit {
+  background-color: #ec6a52;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 3px 10px;
+}
