#13 [update] 日記削除機能を追加

--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -32,6 +32,7 @@
         </div>
         <div class="link">
           <%= link_to "編集", edit_diary_path(diary.id) %>
+          <%= button_to "削除", diary_path(diary.id), { method: :delete, data: { confirm: "本当に削除しますか？" } } %>
         </div>
       </div>
     <% end %>
