--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,25 +1,4 @@
 <div class="diary_container">
   <h3>日記投稿</h3>
-
-  <%= form_with model: @diary do |f| %>
-    <div class="field">
-      <%= f.label :japanese_diary, "日記（日本語）", class:"bold" %><br>
-      <%= f.text_area :japanese_diary, class:"wide_field", placeholder: "日本語で日記を入力" %>
-    </div> 
-    <div class="field">
-      <%= f.label :english_diary, "日記（英語）", class:"bold" %><br>
-      <%= f.text_area :english_diary, class:"wide_field", placeholder: "英語で日記を入力" %>
-    </div>
-    <div class="field">
-      <%= f.label :photo, "写真", class:"bold" %><br>
-      <%= f.file_field :photo, class:"input_field" %>
-    </div>
-    <div class="field">
-      <%= f.label :private_flag, "非公開にする", class:"bold" %><br>
-      <%= f.check_box :private_flag, class:"input_field" %>
-    </div>
-    <div class="field">
-      <%= f.submit "登録", class: "submit" %>
-    </div>
-  <% end %>
+  <%= render "diaries/form", model: @diary %>
 </div>
