--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -1,27 +1,27 @@
-<%= form_with model: model do |f| %>
+<%= form_with model: model do |form| %>
   <div class="field">
-    <%= f.label :japanese_diary, "日記（日本語）", class:"bold" %><br>
-    <%= f.text_area :japanese_diary, class:"wide_field", placeholder: "日本語で日記を入力" %>
+    <%= form.label :japanese_diary, "日記（日本語）", class:"bold" %><br>
+    <%= form.text_area :japanese_diary, class:"wide_field", placeholder: "日本語で日記を入力" %>
   </div> 
   <div class="field">
-    <%= f.label :english_diary, "日記（英語）", class:"bold" %><br>
-    <%= f.text_area :english_diary, class:"wide_field", placeholder: "英語で日記を入力" %>
+    <%= form.label :english_diary, "日記（英語）", class:"bold" %><br>
+    <%= form.text_area :english_diary, class:"wide_field", placeholder: "英語で日記を入力" %>
   </div>
   <div class="field">
-    <%= f.label :photo, "写真", class:"bold" %><br>
-    <%= f.file_field :photo, class:"input_field" %>
+    <%= form.label :photo, "写真", class:"bold" %><br>
+    <%= form.file_field :photo, class:"input_field" %>
   </div>
   <div class="field">
-    <%= f.label :private_flag, "非公開にする", class:"bold" %><br>
-    <%= f.check_box :private_flag, class:"input_field" %>
+    <%= form.label :private_flag, "非公開にする", class:"bold" %><br>
+    <%= form.check_box :private_flag, class:"input_field" %>
   </div>
   <div id="words">
-    <%= link_to_add_association "単語、フレーズの追加", f, :words, data: { association_insertion_method: "append" } %>
-    <%= f.fields_for :words do |word| %>
+    <%= link_to_add_association "単語、フレーズの追加", form, :words, data: { association_insertion_method: "append" } %>
+    <%= form.fields_for :words do |word| %>
       <%= render "diaries/word_fields", f: word %>
     <% end %>
   </div>
   <div class="field">
-    <%= f.submit "登録", class: "submit" %>
+    <%= form.submit "登録", class: "submit" %>
   </div>
 <% end %>
