--- a/app/views/diaries/_word_fields.html.erb
+++ b/app/views/diaries/_word_fields.html.erb
@@ -1,4 +1,5 @@
 <div class="nested-fields">
+  <%= f.hidden_field :user_id, value: current_user.id %>
   <div class="field">
     <%= f.label :japanese_word, "単語、フレーズ（日本語）", class:"bold" %><br>
     <%= f.text_field :japanese_word, class:"text_field", placeholder: "りんご" %>
