--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Words#index</h1>
-<p>Find me in app/views/words/index.html.erb</p>
+<div class="index_container">
+  <h2><%= current_user.username %>さんの単語帳</h2>
+  <div class="diaries">
+    <% @words.each do |word| %>
+      <div class="word_container">
+        <div class="word_container_top">
+          <div class="created_at">
+            <%= word.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
+          </div>
+        </div>
+        <div class="word">
+          <div class="japanese_word">
+            <%= word.japanese_word %>
+          </div>
+        </div>
+        <div class="english_word">
+          <%= word.english_word %>
+        </div>
+        <div class="link">
+          <%#= link_to "編集", edit_word_path(word.id) %>
+          <%= button_to "削除", word_path(word.id), { method: :delete, data: { confirm: "本当に削除しますか？" } } %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
