#14 [update] 削除ボタンにclass名追加

--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -18,7 +18,7 @@
         </div>
         <div class="link">
           <%#= link_to "編集", edit_word_path(word.id) %>
-          <%= button_to "削除", word_path(word.id), { method: :delete, data: { confirm: "本当に削除しますか？" } } %>
+          <%= button_to "削除", word_path(word.id), { method: :delete, data: { confirm: "本当に削除しますか？" }, class: "word_button" } %>
         </div>
       </div>
     <% end %>
