#19 [update] 削除ボタンの見た目変更

--- a/app/assets/stylesheets/diaries.scss
+++ b/app/assets/stylesheets/diaries.scss
@@ -37,3 +37,11 @@ h2 {
   border-radius: 3px;
   padding: 3px 10px;
 }
+
+.diary_destroy_button {
+  background-color: #ec6a52;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 3px 10px;
+}
