--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,21 @@
     </header>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <div id="main_wrapper">
+      <aside id="sidebar">
+        <ul>
+          <li><%= link_to "トップへ",homes_show_path %></li>
+          <li><%= link_to "日記を投稿する", new_diary_path %></li>
+          <li><%= link_to "#{current_user.username}さんの日記一覧", diaries_path %></li>
+          <li><%= link_to "みんなの日記一覧", all_diaries_path %></li>
+          <li><%= link_to "#{current_user.username}さんの単語帳", words_path %></li>
+          <li><%#= link_to "みんなの単語帳", %></li>
+        </ul>
+      </aside>
+      <div id="main_area">
+        <%= yield %>
+      </div>
+    </div>
     <footer>
       <div class="footer_navi">
         <small>&copy; 2023 English Diary</small>
