#31 [update] サイドメニューを画面固定にした

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -74,6 +74,10 @@ header h1 {
   background-color: white;
 }
 
+#sidebar ul {
+  position: fixed;
+}
+
 #sidebar ul li {
   display: inline-block;
   width: 100%;
