#31 [update] サイドバー右側にボーダー追加

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -71,6 +71,7 @@ header h1 {
 #sidebar {
   width: 20%;
   background-color: white;
+  border-right: 1px solid rgb(221, 220, 220);
 }
 
 #sidebar ul {
