#36 [update] フラッシュメッセージがある時だけフラッシュメッセージを表示させるようにした

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -46,6 +46,13 @@ header h1 {
   margin: 5px 0 10px;
 }
 
+#message p {
+  color: white;
+  background-color: #ec6a52;
+  margin: 0;
+  padding: 2px 15px;
+}
+
 #global_navi {
   margin-bottom: 16px;
 }
