--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,9 +2,9 @@
   <ul>
     <li><%= link_to "トップへ",homes_show_path %></li>
     <li><%= link_to "日記を投稿する", new_diary_path %></li>
-    <li><%= link_to "#{current_user}さんの日記一覧", diaries_path %></li>
+    <li><%= link_to "#{current_user.username}さんの日記一覧", diaries_path %></li>
     <li><%= link_to "みんなの日記一覧", all_diaries_path %></li>
-    <li><%= link_to "#{current_user}さんの単語帳", words_path %></li>
+    <li><%= link_to "#{current_user.username}さんの単語帳", words_path %></li>
     <li><%#= link_to "みんなの単語帳", %></li>
   </ul>
 </aside>
