--- a/app/assets/stylesheets/words.scss
+++ b/app/assets/stylesheets/words.scss
@@ -26,6 +26,10 @@ h2 {
   padding-bottom: 15px;
 }
 
+.memo {
+  padding-bottom: 15px;
+}
+
 .word_button {
   background-color: #ec6a52;
   color: white;
