#15 [update] 単語テストの日本語訳、答えの英訳を表示させるようにした

--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -1,2 +1,5 @@
 <h1>ExamQuestions#show</h1>
 <p>Find me in app/views/exam_questions/show.html.erb</p>
+
+<%= @exam_question.word.japanese_word %>
+<%= @exam_question.word.english_word %>
