#15 [update]　単語テスト開始ボタンの名前を「テスト開始」に変更

--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -2,6 +2,6 @@
 <p>Find me in app/views/exams/new.html.erb</p>
 <%= form_with model: @exam, url: exams_path do |f| %>
 <div class="field">
-  <%= f.submit "登録" %>
+  <%= f.submit "テスト開始" %>
 </div>
 <% end %>
