--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -1,5 +1,10 @@
-<h1>ExamQuestions#show</h1>
-<p>Find me in app/views/exam_questions/show.html.erb</p>
+<h1>単語テスト</h1>
 
-<%= @exam_question.word.japanese_word %>
-<%= @exam_question.word.english_word %>
+<%= @exam_question.word.japanese_word %>の英語訳は？
+
+<%= form_with model: @exam_question, url: exam_question_path do |f| %>
+  <div class="field">
+    <%= f.label :english_word, "単語、フレーズ（英語）", class:"bold" %><br>
+    <%= f.text_field :english_word, class:"text_field", placeholder: "apple" %>
+  </div>
+<% end %>
