#15 [update] 次の問題へ移るボタンを追加

--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -7,4 +7,7 @@
     <%= f.label :english_word, "単語、フレーズ（英語）", class:"bold" %><br>
     <%= f.text_field :english_word, class:"text_field", placeholder: "apple" %>
   </div>
+  <div class="field">
+    <%= f.submit "次へ" %>
+  </div>
 <% end %>
