#20 [update] スタイルの名称を共通化

--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,4 +1,4 @@
-<div class="index_container">
+<div class="container">
   <h2><%= current_user.username %>さんの日記一覧</h2>
   <div class="diaries">
     <% @diaries.each do |diary| %>
