--- a/app/views/diaries/show.html.erb
+++ b/app/views/diaries/show.html.erb
@@ -1,5 +1,5 @@
-<div class="diary_container">
-  <div class="diary_container_top">
+<div class="container">
+  <div class="container_top">
     <div class="created_at">
       <%= @diary.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
     </div>
