--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="user_container">
+<div class="container">
   <div class="user_input_area">
     <h3>プロフィール編集</h3>
     <%= form_with model: @user, url: profiles_path do |f| %>
