--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -24,6 +24,10 @@ h1,h2,h3,h4,h5,h6 {
   margin-top: 0;
 }
 
+h2 {
+  padding-left: 30px;
+}
+
 p {
   margin-top: 0;
   line-height: 1.6;
@@ -97,4 +101,20 @@ footer {
   margin-bottom: 0;
   color: white;
   padding: 10px 0;
+}
+
+.container {
+  background-color: white;
+  width: 500px;
+  padding: 15px 25px;
+  margin: 25px auto;
+}
+
+.container_top {
+  display: flex;
+}
+
+.created_at {
+  color: rgb(124, 121, 121);
+  padding-right: 15px;
 }
