--- a/app/views/all_diaries/index.html.erb
+++ b/app/views/all_diaries/index.html.erb
@@ -1,4 +1,4 @@
-<div class="index_container">
+<div class="container">
   <h2>日記一覧</h2>
   <div class="diaries">
     <% @diaries.each do |diary| %>
