--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,4 +1,4 @@
-<div class="index_container">
+<div class="container">
   <h2><%= current_user.username %>さんの単語帳</h2>
   <div class="diaries">
     <% @words.each do |word| %>
