--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="index_container">
   <h2><%= current_user.username %>さんの日記一覧</h2>
   <div class="diaries">
     <% @diaries.each do |diary| %>
-      <div class="diary_container">
-        <div class="diary_container_top">
+      <div class="container">
+        <div class="container_top">
           <div class="created_at">
             <%= diary.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
           </div>
