--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="index_container">
   <h2><%= current_user.username %>さんの単語帳</h2>
   <div class="diaries">
     <% @words.each do |word| %>
-      <div class="word_container">
-        <div class="word_container_top">
+      <div class="container">
+        <div class="container_top">
           <div class="created_at">
             <%= word.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
           </div>
