#20 [update] 縦に短いページを長く表示するようにした

--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -1,13 +1,15 @@
-<h1>単語テスト</h1>
+<div class="short_container">
+  <h1>単語テスト</h1>
 
-<%= @exam_question.word.japanese_word %>の英語訳は？
+  <%= @exam_question.word.japanese_word %>の英語訳は？
 
-<%= form_with model: @exam_question, url: exam_question_path do |f| %>
-  <div class="field">
-    <%= f.label :english_word, "単語、フレーズ（英語）", class:"bold" %><br>
-    <%= f.text_field :english_word, class:"text_field", placeholder: "apple" %>
-  </div>
-  <div class="field">
-    <%= f.submit "次へ" %>
-  </div>
-<% end %>
+  <%= form_with model: @exam_question, url: exam_question_path do |f| %>
+    <div class="field">
+      <%= f.label :english_word, "単語、フレーズ（英語）", class:"bold" %><br>
+      <%= f.text_field :english_word, class:"text_field", placeholder: "apple" %>
+    </div>
+    <div class="field">
+      <%= f.submit "次へ" %>
+    </div>
+  <% end %>
+</div>
