--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,2 +1,4 @@
-<h1>こんにちは、<%= current_user.email %>さん</h1>
-<p>ユーザー用ページです</p>
+<div class="short_container">
+  <h1>こんにちは、<%= current_user.email %>さん</h1>
+  <p>ユーザー用ページです</p>
+</div>
