#15 [update] サイドバーに「単語テスト」ページへのリンクを追加

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -5,6 +5,7 @@
     <li><%= link_to "#{current_user.username}さんの日記一覧", diaries_path %></li>
     <li><%= link_to "みんなの日記一覧", all_diaries_path %></li>
     <li><%= link_to "#{current_user.username}さんの単語帳", words_path %></li>
+    <li><%= link_to "単語テスト", new_exam_path %></li>
     <li><%#= link_to "みんなの単語帳", %></li>
   </ul>
 </aside>
