#15 [update] 正答率の表記方法変更

--- a/app/assets/stylesheets/words.scss
+++ b/app/assets/stylesheets/words.scss
@@ -17,3 +17,17 @@
   border-radius: 3px;
   padding: 3px 10px;
 }
+
+.correct_answers {
+  font-size: 75px;
+  text-align: center;
+  color: #ec6a52;
+}
+
+.correct_answers span {
+  padding: 15px;
+  font-size: 35px;
+  color: #262338;
+}
+
+
