#15 [update] 小見出し変更

--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,6 +1,6 @@
 <div class="short_container">
   <div class="container">
-    <h3>正答率</h3>
+    <h3>テスト結果</h3>
     <div class="field">
       <p class="correct_answers">
         10<span>問中</span><%= @correct_answers.size %><span>問正解</span>
