--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -1,6 +1,6 @@
 <div class="short_container">
   <div class="container">
-    <h3>単語テスト</h3>
+    <h3 class="exam">単語テスト<span>10問</span></h3>
     <%= form_with model: @exam, url: exams_path do |f| %>
     <div class="field">
       <%= f.submit "テスト開始" %>
