--- a/app/assets/stylesheets/words.scss
+++ b/app/assets/stylesheets/words.scss
@@ -41,3 +41,15 @@
 .result_links li {
   padding-bottom: 15px;
 }
+
+.answers_list {
+  padding: 15px;
+}
+
+.correct_answers_list {
+  padding-bottom: 25px;
+}
+
+.answers_list h3 {
+  border-bottom: 1px solid black;
+}
