#15 [update] 単語テストページの見栄えを整えた

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -122,3 +122,11 @@ footer {
 .short_container {
   height: 670px;
 }
+
+.submit {
+  background-color: #ec6a52;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 3px 10px;
+}
