--- a/app/assets/stylesheets/words.scss
+++ b/app/assets/stylesheets/words.scss
@@ -58,3 +58,18 @@
 .answers_list h3 {
   border-bottom: 1px solid black;
 }
+
+.exam_area p {
+  font-size: large;
+  display: inline;
+}
+
+.exam_area span {
+  font-size: larger;
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+.exam_area .field {
+  padding: 25px 0 35px 0;
+}
