--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h3 class="exam">単語テスト<span>10問</span></h3>
     <%= form_with model: @exam, url: exams_path do |f| %>
-    <div class="field">
+    <div class="exam_start field">
       <%= f.submit "テスト開始", class:"submit" %>
     </div>
     <% end %>
