--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,4 +1,6 @@
 <div class="short_container">
-  <h1>こんにちは、<%= current_user.email %>さん</h1>
-  <p>ユーザー用ページです</p>
+  <div class="container">
+    <h1>こんにちは、<%= current_user.email %>さん</h1>
+    <p>ユーザー用ページです</p>
+  </div>
 </div>
