--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,6 @@
 <div class="short_container">
-  <h1>ようこそ</h1>
-  <p>トップページです。</p>
+  <div class="container">
+    <h1>ようこそ</h1>
+    <p>トップページです。</p>
+  </div>
 </div>
