#15 [update] 単語テスト結果画面で、単語登録時のメモも一緒に表示されるようにした

--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -8,12 +8,22 @@
         <h3>正解</h3>
         <% @correct_answers.each do |correct| %>
           <p><%= correct.word.japanese_word %>：<%= correct.word.english_word %></p>
+          <% if correct.word.memo %>
+            <div class="memo">
+              <%= correct.word.memo %>
+            </div>
+          <% end %>
         <% end %>
       </div>
       <div class="wrong_answers_list">
         <h3>不正解</h3>
         <% @wrong_answers.each do |wrong| %>
           <p><%= wrong.word.japanese_word %>：<%= wrong.word.english_word %></p>
+          <% if wrong.word.memo %>
+            <div class="memo">
+              <%= wrong.word.memo %>
+            </div>
+          <% end %>
         <% end %>
       </div>
     </div>
