#15 [update] 単語の横にメモを表示させるようにした

--- a/app/assets/stylesheets/words.scss
+++ b/app/assets/stylesheets/words.scss
@@ -77,3 +77,15 @@
 .exam_start {
   margin: 100px 0 15px;
 }
+
+.correct_answers_list {
+  display: flex;
+}
+
+.wrong_answers_list {
+  display: flex;
+}
+
+.memo_field {
+  padding-left: 35px;
+}
