--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -32,7 +32,7 @@
         </div>
         <div class="link">
           <%= link_to "編集", edit_diary_path(diary.id) %>
-          <%= button_to "削除", diary_path(diary.id), { method: :delete, data: { confirm: "本当に削除しますか？" } } %>
+          <%= button_to "削除", diary_path(diary.id), form: { data: { turbo_confirm: "本当に削除しますか？" } }, method: :delete %>
         </div>
       </div>
     <% end %>
