#20 [update] sidebarにmin-h-screenを設定したため、short_containerクラスの高さ指定を廃止

--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,6 +1,6 @@
 <div class="index_container">
   <h2><%= current_user.username %>さんの日記一覧</h2>
-  <div class="diaries">
+  <div class="min-h-full">
     <% @diaries.each do |diary| %>
       <div class="container">
         <div class="container_top">
