--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside id="sidebar">
+<aside class="min-h-screen" id="sidebar">
   <ul>
     <li><%= link_to "トップへ",homes_show_path %></li>
     <li><%= link_to "日記を投稿する", new_diary_path %></li>
