#20 [update] containerにshadowをつけた

--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -1,6 +1,6 @@
 <div class="short_container">
   <h2>単語テスト</h2>
-  <div class="container">
+  <div class="shadow container">
     <div class="exam_area">
       <p><span>「<%= @exam_question.word.japanese_word %>」</span>の英語訳は？</p>
       <%= form_with model: @exam_question, url: exam_question_path do |f| %>
