--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="shadow container">
   <h3>テスト結果</h3>
     <p class="correct_answers">
       10<span>問中</span><%= @correct_answers.size %><span>問正解</span>
