--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -2,7 +2,7 @@
   <h2><%= current_user.username %>さんの日記一覧</h2>
   <div class="min-h-full">
     <% @diaries.each do |diary| %>
-      <div class="container">
+      <div class="shadow container">
         <div class="container_top">
           <div class="created_at">
             <%= diary.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
