--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="shadow container">
   <h3 class="exam">単語テスト<span>10問</span></h3>
   <%= form_with model: @exam, url: exams_path do |f| %>
   <div class="exam_start field">
