--- a/app/views/all_diaries/index.html.erb
+++ b/app/views/all_diaries/index.html.erb
@@ -2,7 +2,7 @@
   <h2>日記一覧</h2>
   <div class="diaries">
     <% @diaries.each do |diary| %>
-      <div class="container">
+      <div class="shadow container">
         <div class="container_top">
           <% if diary.user.avatar? %>
             <div class="avatar">
