#20 [update] tailwind cssを利用してflex設定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/@oddcamp/cocoon-vanilla-js@1.1.3/index.min.js' %>
   </head>
   <body>
-    <header>
+    <header class="flex justify-between">
       <h1>English Diary</h1>
       <div>
         <button>
