--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header class="flex justify-between">
-      <h1>English Diary</h1>
+      <h1 class="text-2xl font-semibold">English Diary</h1>
       <div>
         <button>
           <svg class="h-6 w-6 fill-current" viewBox="0 0 24 24">
