--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/@oddcamp/cocoon-vanilla-js@1.1.3/index.min.js' %>
   </head>
   <body>
-    <header class="flex justify-between items-center">
+    <header class="flex justify-between items-center text-white">
       <h1 class="text-2xl font-semibold">English Diary</h1>
       <div>
         <button>
