--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/@oddcamp/cocoon-vanilla-js@1.1.3/index.min.js' %>
   </head>
   <body>
-    <header class="text-white">
+    <header class="text-white pb-1">
       <div class="flex justify-between items-center">
         <h1 class="text-2xl font-semibold">English Diary</h1>
         <div>
@@ -36,7 +36,7 @@
           <% else %>
             <li class="block px-8 py-2"><%= link_to "サインアップ", new_user_registration_path %></li>
             <li class="block px-8 py-2"><%= link_to "ログイン", new_user_session_path %></li>
-            <li class="block px-8 py-2"><%= button_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, data: { turbo_method: :post } %></li>
+            <li class="block px-8 py-2><%= button_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, data: { turbo_method: :post } %></li>
           <% end %>
         </ul>
       </div>
