#20 [update] PCの画面ではハンバーガーメニューは必要ないので非表示にした

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <h1 class="text-2xl font-semibold">English Diary</h1>
         <div>
           <button>
-            <svg class="h-6 w-6 fill-current" viewBox="0 0 24 24">
+            <svg class="md:hidden h-6 w-6 fill-current" viewBox="0 0 24 24">
               <path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z"/>
             </svg>
           </button>
