#20 [update] メニューを左寄せにした

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div>
-        <ul class="md:flex md:justify-center">
+        <ul class="md:flex md:justify-end">
           <% if user_signed_in? %>
             <li class="block px-8 py-2">
               <% if current_user.avatar? %>
