#20 [update] サイドバーを768px以下で非表示にした

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="min-h-screen" id="sidebar">
+<aside class="min-h-screen max-md:hidden" id="sidebar">
   <ul>
     <li><%= link_to "トップへ",homes_show_path %></li>
     <li><%= link_to "日記を投稿する", new_diary_path %></li>
