#20 [update] 不要なidを削除

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
         <p class="alert"><%= alert %></p>
       <% end %>
     </div>
-    <div id="main_wrapper">
+    <div class="flex">
       <% if user_signed_in? %>
         <%= render "shared/sidebar" %>
       <% end %>
