--- a/app/views/diaries/edit.html.erb
+++ b/app/views/diaries/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="shadow container">
+<div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
   <h3>日記編集</h3>
 
   <%= form_with model: @diary do |f| %>
