--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,4 +1,4 @@
-<div class="shadow container">
+<div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
   <h1>こんにちは、<%= current_user.email %>さん</h1>
   <p>ユーザー用ページです</p>
 </div>
