--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,4 +1,4 @@
 <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
-  <h3>日記投稿</h3>
+  <h3 class="inline border-b">日記投稿</h3>
   <%= render "diaries/form", model: @diary %>
 </div>
