--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: model do |form| %>
-  <div class="field">
+  <div class="field pt-6">
     <%= form.label :japanese_diary, "日記（日本語）", class:"bold" %><br>
     <%= form.text_area :japanese_diary, class:"wide_field", placeholder: "日本語で日記を入力" %>
   </div> 
@@ -7,11 +7,11 @@
     <%= form.label :english_diary, "日記（英語）", class:"bold" %><br>
     <%= form.text_area :english_diary, class:"wide_field", placeholder: "英語で日記を入力" %>
   </div>
-  <div class="field">
+  <div class="field pt-6">
     <%= form.label :photo, "写真", class:"bold" %><br>
     <%= form.file_field :photo, class:"input_field" %>
   </div>
-  <div class="field">
+  <div class="field py-6">
     <%= form.label :private_flag, "非公開にする", class:"bold" %><br>
     <%= form.check_box :private_flag, class:"input_field" %>
   </div>
@@ -21,7 +21,7 @@
       <%= render "diaries/word_fields", f: word %>
     <% end %>
   </div>
-  <div class="field">
+  <div class="field pt-6">
     <%= form.submit "登録", class: "submit" %>
   </div>
 <% end %>
